--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -36,6 +36,8 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td><form method="POST" action="/urls/<%= id %>">
+                <button type="submit" class="btn btn-outline-primary">Edit</button></form></td>
               <td><form method="POST" action="/urls/<%= id %>/delete">
                 <button type="submit" class="btn btn-outline-danger">Delete</button></form></td>
 
