--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,7 +13,6 @@
 
   <body>
     <%- include('partials/_header') %>
-
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
@@ -21,9 +20,20 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
+
       </div>
       <div class="card-footer text-muted"></div>
+      <h2>Edit</h2>
+      <form class="form-inline justify-content-center"  action="/urls/<%= id %>" method=POST>
+        <label for="longURL">New URL:</label>
+        <input class="form-control" type="text" name="longURL" placeholder="http://" style="margin: 1em">
+        <button type="submit" class="btn btn-info">Submit</button>
+      </form>
+
+      
     </div>
+    
+
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
